--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     
-    <a href="index.html">
+    <a href="index2.html">
         <H1>WELCOME</H1>
         <h1>TO SCIENCE EXPO 2024-25</h1>
         <div class="btn">
